...
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="127dp" />

    <Spinner
        android:id="@+id/sp_car_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/car_type_selection_list"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        app:layout_constraintBottom_toTopOf="@id/list_car_category"
        />


    <ListView
        android:id="@+id/list_car_category"
        android:layout_width="match_parent"
...
